welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
var caseVerte = false
def isFacingTrail():Boolean = {
  avance();
  if (getCouleurSol()==Color.green) {
  	recule();
    caseVerte = true;
  }
}